--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-cache": "^0.4.2",
+    "gulp-cache-bust": "^1.3.0",
     "gulp-cssnano": "^2.0.0",
     "gulp-eslint": "^3.0.0",
     "gulp-htmlmin": "^3.0.0",
