--- a/package.json
+++ b/package.json
@@ -34,7 +34,5 @@
     "serve": "gulp serve",
     "serve:dist": "gulp serve:dist"
   },
-  "dependencies": {
-    "normalize-css": "^2.3.1"
-  }
+  "dependencies": {}
 }
